<resources>
    <string name="app_name">Laundry</string>
    <string name="landing_heading">Quick Wash</string>


    <!-- Sign and SignUp Page-->
    <string name="signUp_btn">Register Now</string>
    <string name="signIn_btn">Sign In</string>
    <string name="update_btn">Update</string>
    <string name="gps_network_not_enabled">Please Enable Location</string>
    <string name="open_location_settings">Location Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="email_number">Email Address</string>
    <string name="paswd">Password</string>
    <string name="account_create">Create an account?</string>
    <string name="SignUp">\u0020 Sign Up</string>
    <string name="submit">Submit</string>
    <string name="btn_register">Register Now</string>
    <string name="photo_txt">Add Photo</string>

    <string name="cpr_no">ime</string>
    <string name="address">City</string>
    <string name="phno">Phone Number</string>
    <string name="create_acnt">Have an Account?</string>
    <string name="Login">\u0020 Log In.</string>
    <string name="password">Password</string>
    <string name="retype_password">Re-type Password</string>
    <string name="emil_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="fill_txt">Fill the details below</string>
    <string name="permission_location_check">We need this pemission to read documents from device.</string>
    <string name="snack_error_network">Please turn on your net.</string>

    <!--******************-->
    <string name="ht_name">Enter Full Name</string>
    <string name="ht_email">Email Address</string>
    <string name="ht_phone">Phone number</string>
    <string name="ht_pass1">Create Password</string>
    <string name="ht_pass2">Confirm Password</string>

    <!-- Sign in Page -->
    <string name="tv_heading">Sign In Now </string>
    <string name="tv_heading2">Oh! Not Registered Yet?</string>
    <string name="ht_email_pass">Email or Phone Number</string>
    <string name="ht_pass3">Password</string>
    <string name="tv_forget_pass">Forgot ?</string>
    <string name="pref_key_transition_time" translatable="false">pref_key_transition_time</string>
    <string name="dialog_seekbar_transition_time">Item transition time in millis</string>

    <!-- landing Footer -->

    <string name="tv_active_order_sufix">Your Active Order </string>
    <string name="tv_active_order_prefix">Past Order</string>

</resources>
