<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_15"
            android:gravity="left|center"
            android:src="@drawable/arrow_left" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_20"
            android:gravity="left|center"
            android:text="@string/btn_register"
            android:textSize="@dimen/_15"
            android:textStyle="bold" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.voyager.laundry.costom.CircleImageView
                    android:id="@+id/profileImg"
                    android:layout_width="@dimen/_100"
                    android:layout_height="@dimen/_100"
                    android:layout_gravity="top|center"
                    android:cropToPadding="true"
                    android:src="@drawable/profile"
                    app:civ_border="true"
                    app:civ_border_color="@color/black"
                    app:civ_border_overlay="true"
                    app:civ_border_width="3dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginTop="@dimen/_10"
                    android:text="@string/photo_txt" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15"
                    android:layout_marginRight="@dimen/_15"
                    android:drawableLeft="@drawable/name"
                    android:drawablePadding="@dimen/_20"
                    android:hint="@string/ht_name"
                    android:paddingLeft="@dimen/_10"
                    android:textSize="@dimen/_12"
                    app:backgroundTint="@color/edt_txt_underline" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15"
                    android:layout_marginRight="@dimen/_15"
                    android:drawableLeft="@drawable/mail"
                    android:drawablePadding="@dimen/_20"
                    android:hint="@string/ht_email"
                    android:paddingLeft="@dimen/_10"
                    android:textSize="@dimen/_12"
                    app:backgroundTint="@color/edt_txt_underline" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15"
                    android:layout_marginRight="@dimen/_15"
                    android:drawableLeft="@drawable/phone"
                    android:drawablePadding="@dimen/_20"
                    android:hint="@string/ht_phone"
                    android:paddingLeft="@dimen/_10"
                    android:textSize="@dimen/_12"
                    app:backgroundTint="@color/edt_txt_underline" />


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etCPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15"
                    android:layout_marginRight="@dimen/_15"
                    android:drawableLeft="@drawable/lock"
                    android:drawablePadding="@dimen/_20"
                    android:hint="@string/ht_pass1"
                    android:paddingLeft="@dimen/_10"
                    android:textSize="@dimen/_12"
                    app:backgroundTint="@color/edt_txt_underline" />


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etCnfPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15"
                    android:layout_marginRight="@dimen/_15"
                    android:drawableLeft="@drawable/lock"
                    android:drawablePadding="@dimen/_20"
                    android:hint="@string/ht_pass2"
                    android:paddingLeft="@dimen/_10"
                    android:textSize="@dimen/_12"
                    app:backgroundTint="@color/edt_txt_underline" />


                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10"
                    android:layout_gravity="center"
                    android:elevation="@dimen/_10"
                    android:shadowColor="@color/dark_gray"
                    android:background="@drawable/rectangle_button"
                    android:onClick="btnRegister"
                    android:text="@string/btn_register"
                    android:textColor="@color/white"
                    android:textAllCaps="false" />



            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>